post 0.2.0 fixes, round 3 - static theme previews+